<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sc1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18"
            app:layout_constraintStart_toStartOf="parent" />


        <CheckBox
            android:id="@+id/cB1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/label1"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tv2"
            tools:visibility="visible" />


        <CheckBox
            android:id="@+id/cB2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/label4"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cB1"
            app:layout_constraintTop_toBottomOf="@+id/cB1" />

        <CheckBox
            android:id="@+id/cB3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/label3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/cB2"
            app:layout_constraintTop_toBottomOf="@+id/cB2" />

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="44dp"
            android:backgroundTint="#FF8A80"
            android:text="@string/label8"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/eT1"
            app:layout_constraintTop_toBottomOf="@+id/eT1" />

        <EditText
            android:id="@+id/eT1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:ems="10"
            android:hint="@string/label7"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sw1"
            app:layout_constraintTop_toBottomOf="@+id/rG1" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/label5"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <Switch
            android:id="@+id/sw1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="296dp"
            android:text="@string/label9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cB2"
            app:layout_constraintTop_toBottomOf="@+id/cB3" />

        <RadioGroup
            android:id="@+id/rG1"
            android:layout_width="181dp"
            android:layout_height="58dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/sw1"
            app:layout_constraintTop_toBottomOf="@+id/sw1">

            <RadioButton
                android:id="@+id/rB1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/label10" />

            <RadioButton
                android:id="@+id/rB2"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="@string/label11" />

        </RadioGroup>

        <EditText
            android:id="@+id/eT2"
            android:layout_width="35dp"
            android:layout_height="49dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toEndOf="@+id/cB1"
            app:layout_constraintTop_toTopOf="@+id/cB1" />

        <ImageButton
            android:id="@+id/iB1"
            android:layout_width="32dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/eT2"
            app:layout_constraintTop_toTopOf="@+id/eT2"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <ImageButton
            android:id="@+id/iB2"
            android:layout_width="32dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/eT2"
            app:layout_constraintStart_toEndOf="@+id/eT2"
            app:layout_constraintTop_toBottomOf="@+id/iB1"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bar" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>